--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body{
 }
 
 
+
 /*header and four part css*/
 
 .header_img {
@@ -40,6 +41,48 @@ body{
 	margin: 3%;
 }
 
+
+ @media screen and (max-width: 768px) {
+  	 
+  	.header_image_text , .four_image_text{
+		padding-left: 15%;
+		padding-top: 30%;
+		font-size: 20px;
+	}
+
+	.header_image_text_undertext {
+		color: rgba(99, 98, 98, 0.986);
+		padding-left: 12%;
+		font-size: 15px;
+	}
+
+	.second_row_text , .five_row_text{
+		padding: 20px;
+		font-size: 50px; 
+		padding-left: 90px;
+	}
+
+	.second_row_text_2 , .five_row_text_2{
+		font-size: 10px;
+		padding: 12px;
+	}
+
+	#four_image_text_undertext{
+		padding-left: 19%;
+		font-size: 15px;
+    	text-align: center;
+    	margin-right: 21px;
+    	margin-top: 30px;
+	}
+
+
+	p{
+		font-size: 25px;
+    	margin-left: -40px;
+    }
+
+ }
+
 /*secund and five part css*/
 
 .second_row_text , .five_row_text{
@@ -49,7 +92,6 @@ body{
 }
 
 .second_row_text_2 , .five_row_text_2{
-/*	text-align: left;*/
 	font-size: 20px;
 	padding: 12px;
 }
@@ -61,7 +103,7 @@ body{
 
 
 
-#left{
+/*#left{
 	width: 240rem;
 }
 
@@ -99,10 +141,10 @@ body{
 	margin-top: 10px;
 	margin-bottom: 10px;
 	gap: 10px;
-}            
+} */           
 
 
-/*.therd_part_forimg{
+.therd_part_forimg{
 	flex: 1; 
   	padding: em;
 }
@@ -126,7 +168,7 @@ body{
 	border: 3px solid rgb(255, 255, 255);
 	border-radius: 10px 10px 10px 10px;
 }
-*/
+
 
 
 
@@ -153,8 +195,8 @@ body{
 /*six part css*/
 
 .six_part_img{
-    border-radius: 15% 15% 15% 15%;
-
+    border-radius: 50px;
+    padding: 3px;
 }
 
 
